[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdl_lt_reflex_aggrid_wrapper"
version = "0.1.0"
description = "AG Grid Community (v35) wrapper for Reflex"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "reflex>=0.6.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Reflex",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]
keywords = ["reflex", "ag-grid", "data-grid", "table", "component"]

[project.urls]
Homepage = "https://https://github.com/pdl-lex/pdl-lt-reflex-aggrid-wrapper"
Repository = "https://https://github.com/pdl-lex/pdl-lt-reflex-aggrid-wrapper"

[tool.setuptools.packages.find]
include = ["pdl_lt_reflex_aggrid_wrapper*"]
